--- a/assets/css/aboutMeCarousel.css
+++ b/assets/css/aboutMeCarousel.css
@@ -3,14 +3,15 @@
   height: 100%;
 }
 
-#aboutMeCarousel {
-  background-color: none;
-  height: 600px;
-  min-width: fit-content;
+#aboutMeCarouselHolder {
 }
 
-#aboutMeCarousel .carousel-inner {
-  height: 100%;
+#aboutMeCarousel {
+  background-color: none;
+  height: fit-content;
+  min-width: fit-content;
+  /* border: cyan solid 2px; */
+  overflow: visible;
 }
 
 #aboutMeCarousel .carousel-item {
@@ -46,6 +47,11 @@
 .carouselControlIcon {
   height: 30px;
   width: 30px;
+}
+
+#aboutMeCarousel .carousel-inner {
+  /* height: 50px; */
+  /* border: fuchsia solid 2px; */
 }
 
 @media screen and (min-width: 360px) {
